# forkwisperGolos

./: .env.example  Cargo.toml  README.md  justfile
.github/workflows/: linux-ci.yml  windows-ci.yml
ci/: ggml-portable.cmake
src/: api.rs  auto_paste.rs  config.rs  db.rs  local_stt.rs  main.rs  mouse_hotkey.rs  post_process.rs  ui.rs
src/tests/: config_load_tests.rs  config_tests.rs  model_download_tests.rs
